--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="cards-grid">
   <div class="flip-card">
     <div class="flip-card-inner">
-      <div class="flip-card-front" style="background-image: url(./oliver/O3.jpg);">
+      <div class="flip-card-front" style="background-image: url(oliver/O3.jpg);">
       </div>
       <div class="flip-card-back">
       <h3 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Y siempre, obece a tus padre, porque a pesar que no queramos hacer las cosas como ellos dicen, ya sea por berrinche o capricho, ellos siempre <br>
